--- a/SanPhamCK2/login.css
+++ b/SanPhamCK2/login.css
@@ -172,6 +172,8 @@ div.container{
     justify-content: center;
     gap: 10px;
     padding-top: 60px;
+    gap: 5rem;
+    padding-bottom: 4rem;
 }
 /* login */
 div.Login{
@@ -185,12 +187,11 @@ div.Login{
     border-radius: 20px;
     padding: 1rem;
 }
-form#loginForm a{
+form#login-form a{
     text-decoration: none;
     color: black;
     font-family: sans-serif;
     font-size: 1rem;
-    /* padding: 1rem 1rem; */
     margin-top: 1rem;
     display: inline-block;
 }
@@ -200,13 +201,11 @@ h1{
     font-weight: 600;
     padding-bottom: 1rem;
 }
-#loginForm #username-email{
-    width: 90%;
+#login-form #username-email{
+    width: 620px;
     height: 39px;
     border-radius: 5px;
     border: #7b7b7b solid 1px;
-    /* padding: 1rem 0rem;
-    margin: 1rem 1rem; */
     margin-bottom: 1rem;
 }
 div.passwordWrapperLogin{
@@ -214,24 +213,25 @@ div.passwordWrapperLogin{
     align-items: center;
     padding-bottom: 1rem;
 }
-#loginForm #password{
-    width: 90%;
+#login-form #password{
+    width: 600px;
     height: 39px;
     border-radius: 5px;
     border: none;
 }
-input:focus{
-    border: none;
+#login-form input:focus{
+    border: none !important;
+    border-color: #F5F5F5 !important;
 }
-#loginForm label,#save{
+#login-form label,#save{
     font-family: sans-serif;
     font-size: 1rem;
     font-weight: 300;
     color: #555555;
 }
 
-#loginForm button{
-    width: 300px;
+#login-form button{
+    width: 600px;
     margin-top: 1rem;
     background-color: #d18a63;
     border: none;
@@ -241,20 +241,21 @@ input:focus{
 }
 /* registration */
 div.registration{
-    width: 400px;
+    width: fit-content;
     height: 400px;
     display: flex;
     flex-direction: column;
     border: #7b7b7b solid 1px;
     border-radius: 20px;
+    padding: 1rem;
 }
-#registrationForm #email,#registerUsername{
-    width: 290px;
+#registration-form #email,#registerUsername{
+    width: 620px;
     height: 39px;
     border-radius: 5px;
     border: #7b7b7b solid 1px;
     padding: 1rem 0rem;
-    margin: 1rem 1rem;
+    margin: 1rem 0rem;
 }
 div.container img{
     width: 20px;
@@ -263,16 +264,128 @@ div.container img{
 div.passwordWrapperConfirm,div.passwordWrapper{
     display: flex;
     align-items: center;
-    /* gap: 10px; */
-    padding-left: 1rem;
 }
-#registrationForm button{
-    width: 300px;
-    margin-left: 1rem;
+#registration-form button{
+    width: 600px;
     margin-top: 1rem;
     background-color: #d18a63;
     border: none;
     border-radius: 20px;
     font-size: 1.1rem;
     padding: 0.7rem;
+}
+div.passwordWrapperConfirm input{
+    width: 600px;
+    height: 39px;
+    border-radius: 5px;
+    border: none;
+    margin-top: 1rem;;
+}
+div.passwordWrapper input{
+    width: 600px;
+    height: 39px;
+    border-radius: 5px;
+    border: none;
+}
+
+/* Foooooooooooooter */
+div.site-footer{
+    display: flex; 
+    justify-content: center;
+    gap: 7rem;
+    background-color: #F5F5F5;
+    padding: 4rem 0rem 1.9rem 0rem; 
+    /* align-items: center; */
+    font-family: sans-serif;
+}
+div.site-footer div.footer-logo{
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    height: 109px;
+}
+
+div.footer-logo img{
+    width: fit-content;
+    height: fit-content;
+}
+div.footer-logo span{
+    color: #555555;
+    font-size: 1.12rem;
+    font-weight: 400;
+    padding-top: 2.5rem;
+}
+div.site-footer div h2{
+    color: #000000;
+    font-size: 1.25rem;
+    font-weight: 650;
+    padding-bottom: 2.5rem;
+}
+div.site-footer div ul li a{
+    text-decoration: none !important;
+    color: #5a5757;
+    font-size: 1.12rem;
+    font-weight: 550;
+    list-style: none !important;
+}
+div.site-footer div ul li a:hover{
+    color:#ff782d ;
+    cursor: pointer;
+}
+div.site-footer div ul{
+    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    list-style: none !important;
+    font-size: 1.12rem;
+    /* font-weight: 730; */
+}
+div.site-footer div ul.socialIcon{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 1rem;
+    padding-top: 1rem;
+}
+footer.copyRight{
+    padding: 1.5rem 0px;
+    display: flex;
+    justify-content: center;
+    background-color: #F5F5F5;
+    border-top: #d3d3d3 solid 1px;
+    font-family: sans-serif;
+}
+footer.copyRight a{
+    text-decoration: none;
+    color: #111111;
+    font-weight: 700;
+    font-size: 1.2rem;
+    font-family: sans-serif;
+}
+footer.copyRight a:hover{
+    color:#ff782d ;
+    cursor: pointer;
+}
+/* ======== */
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 9;
+    width: 45px;
+    height: 45px;
+    border: none;
+    outline: none;
+    background-color: #000000;
+    color: white;
+    cursor: pointer;
+    /* padding: 15px; */
+    border-radius: 50%;
+    font-size: 18px;
+}
+
+#myBtn:hover {
+    background-color:#eb976a ;
+    cursor: pointer;
 }
