--- a/SanPhamCK2/courseSingle.css
+++ b/SanPhamCK2/courseSingle.css
@@ -15,6 +15,7 @@
     
     
 }
+
 .navBar 
 {
     display: flex;
@@ -150,7 +151,7 @@ div.search:hover i {
     color: #ff782d;
 
 }
-/* homepath */
+/* ================== */
 div.home-path{
     background-color: #F5F5F5;
     padding: 1.5rem;
@@ -169,143 +170,196 @@ div.home-path a,i{
     color: #000000;
     font-size: 1.125rem;
 }
-/* ::content */
-div.container{
+
+div.headBox{
+    background-color: #000000;
+    padding-left: 18rem;
+    padding-top: 1rem;
+    
+}
+/* headerBox */
+h2{
+    color: #ffffff;
+}
+.headBox ul{
+    list-style: none;
     display: flex;
-    justify-content: center;
-    gap: 10px;
-    padding-top: 60px;
-    gap: 5rem;
-    padding-bottom: 4rem;
+    gap: 1rem;
+    padding: 1rem 0;
+    color: rgb(93, 93, 93);
 }
-/* login */
-div.Login{
+.headBox ul li i{
+    color: #de610d;
+    padding-right: 10px;
+}
+div.p{
     display: flex;
-    flex-direction: column;
-    width:fit-content;
-    height: fit-content;
-    justify-content: flex-start;
-    align-items: flex-start;
-    border: #7b7b7b solid 1px;
-    border-radius: 20px;
-    padding: 1rem;
-}
-form#login-form a{
-    text-decoration: none;
-    color: black;
-    font-family: sans-serif;
-    font-size: 1rem;
-    margin-top: 1rem;
-    display: inline-block;
-}
-h1{
-    font-family: Exo,sans-serif;
-    font-size: 1.8rem;
-    font-weight: 600;
+    align-items: center;
+    gap: 5px;
     padding-bottom: 1rem;
 }
-#login-form #login-username{
-    width: 620px;
-    height: 39px;
-    border-radius: 5px;
-    border: #7b7b7b solid 1px;
-    margin-bottom: 1rem;
-    padding-left: 10px;
-    /* margin-top: 1rem; */
-}
-div.passwordWrapperLogin{
-    display: flex;
-    align-items: center;
-    margin-bottom: 1rem;
-    border: #7b7b7b solid 1px;
-    border-radius: 5px;
-}
-#login-form #login-password{
-    width: 590px;
-    height: 39px;
-    border-radius: 5px;
-    border: none;
-    padding-left: 10px;
-}
-#login-form input:focus{
-    outline: none !important;
-}
-#login-form label,#save{
-    font-family: sans-serif;
-    font-size: 1rem;
-    font-weight: 300;
-    color: #555555;
+.p span{
+    color: #848484;
 }
 
-#login-form button{
-    width: 600px;
-    margin-top: 1rem;
-    background-color: #d18a63;
-    border: none;
-    border-radius: 20px;
-    font-size: 1.1rem;
-    padding: 0.7rem;
-}
-/* registration */
-div.registration{
+div.p p {
+    background-color: #404040;
+    color: white;
+    padding: 5px 5px;
     width: fit-content;
-    height: 380px;
-    display: flex;
-    flex-direction: column;
-    border: #7b7b7b solid 1px;
-    border-radius: 20px;
-    padding: 1rem;
-}
-#registration-form #email,#registerUsername{
-    width: 620px;
-    height: 39px;
-    border-radius: 5px;
-    border: #7b7b7b solid 1px;
-    padding: 1rem 0rem;
-    margin-bottom: 1rem;
-    padding-left: 10px;
-}
-div.container img{
-    width: 20px;
-    height: 20px;
-}
-div.passwordWrapperConfirm,div.passwordWrapper{
-    display: flex;
-    align-items: center;
-    border: #7b7b7b solid 1px;
-    border-radius: 5px;
-}
-div.passwordWrapperConfirm{
-    margin-top: 1rem;
-}
-#registration-form button{
-    width: 600px;
-    margin-top: 1rem;
-    background-color: #d18a63;
-    border: none;
-    border-radius: 20px;
-    font-size: 1.1rem;
-    padding: 0.7rem;
-}
-div.passwordWrapperConfirm input{
-    width: 590px;
-    height: 39px;
-    border-radius: 5px;
-    border: none;
-    padding-left: 10px;
-}
-div.passwordWrapper input{
-    width: 590px;
-    height: 39px;
-    border-radius: 5px;
-    border: none;
-    padding-left: 10px;
-}
-#registerPassword:focus ,#confirmPassword:focus, #email:focus, #registerUsername{
-    outline: none;
+    height: fit-content;
+    border-radius: 10px;
 }
 
-/* Foooooooooooooter */
+/* contentBox */
+.content-box {
+    width: 100%;
+    max-width: 800px;
+    margin-left: 18rem;
+    margin-top: 7rem;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.tabs {
+    display: flex;
+    justify-content: center;
+    gap: 0;
+}
+
+.tab-link {
+    padding: 12px 53.6px;
+    cursor: pointer;
+    background-color: #ffffff;
+    transition: background-color 0.3s;
+    border-color: #e1e1e1 ;
+    border-width: 1px;
+    border-top: none;
+    border-left: none;
+}
+.left-corner-tab{
+    border-radius: 10px 0px 0 0;
+}
+.right-corner-tab{
+    border-radius: 0px 10px 0 0;
+    border-right: none;
+}
+.tab-link.active {
+    background-color: #F5F5F5;
+    color: rgb(196, 138, 109);
+}
+
+.tab-link:hover {
+    background-color: #ddd;
+}
+
+.tab-content {
+    display: none;
+}
+
+.tab-content.active {
+    display: block;
+
+}
+/* .lesson-box curricu;um*/
+#curriculum h1{
+    font-size: 20px;
+    padding: 20px 0;
+}
+.lesson-box {
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+
+}
+
+.lesson-toggle {
+    width: 100%;
+    padding: 10px;
+    cursor: pointer;
+    border: none;
+    background-color: #ffffff;
+    text-align: left;
+    font-weight: bold;
+    transition: background-color 0.3s;
+    display: flex;
+    justify-content: space-between;
+}
+.lesson-toggle pre{
+    color: #7b7b7b;
+}
+.lesson-toggle:hover {
+    background-color: #ddd;
+}
+
+.lesson-material {
+    margin-top: 10px;
+    padding-left: 20px;
+}
+.inner-lesson-material{
+    display: flex;
+    justify-content: space-between;
+    padding:20px 0px;
+}
+.inner-lesson-material pre a {
+    text-decoration: none;
+    background-color: rgb(71, 146, 244);
+    border-radius: 5px;
+    padding: 9px 7px;
+    color: white;
+
+}
+/* Overview */
+div#overview{
+    padding: 20px 20px;
+    background-color: #F5F5F5;
+}
+#curriculum, #faqs, #instructor,#reviews{
+    background-color: #F5F5F5 !important;
+    padding: 20px 20px;
+}
+/* FAQ */
+.faq-item {
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    background-color: white;
+}
+
+.faq-question {
+    width: 100%;
+    cursor: pointer;
+    border: none;
+    background-color: #f1f1f1;
+    text-align: left;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: background-color 0.3s;
+    background-color: white;
+}
+
+.faq-question:hover {
+    color: #838383;
+}
+
+.faq-answer {
+    margin-top: 10px;
+    padding-left: 20px;
+}
+
+.arrow {
+    transition: transform 0.3s;
+}
+
+.arrow.open {
+    transform: rotate(180deg);
+}
+
+/* footer  */
 div.site-footer{
     display: flex; 
     justify-content: center;
@@ -313,7 +367,6 @@ div.site-footer{
     background-color: #F5F5F5;
     padding: 4rem 0rem 1.9rem 0rem; 
     /* align-items: center; */
-    font-family: sans-serif;
 }
 div.site-footer div.footer-logo{
     display: flex;
@@ -370,14 +423,12 @@ footer.copyRight{
     justify-content: center;
     background-color: #F5F5F5;
     border-top: #d3d3d3 solid 1px;
-    font-family: sans-serif;
 }
 footer.copyRight a{
     text-decoration: none;
     color: #111111;
     font-weight: 700;
     font-size: 1.2rem;
-    font-family: sans-serif;
 }
 footer.copyRight a:hover{
     color:#ff782d ;
@@ -406,3 +457,4 @@ footer.copyRight a:hover{
     background-color:#eb976a ;
     cursor: pointer;
 }
+
