--- a/SanPhamCK2/error.css
+++ b/SanPhamCK2/error.css
@@ -15,6 +15,7 @@
     
     
 }
+
 .navBar 
 {
     display: flex;
@@ -150,7 +151,7 @@ div.search:hover i {
     color: #ff782d;
 
 }
-/* homepath */
+/* ================== */
 div.home-path{
     background-color: #F5F5F5;
     padding: 1.5rem;
@@ -169,143 +170,23 @@ div.home-path a,i{
     color: #000000;
     font-size: 1.125rem;
 }
-/* ::content */
-div.container{
+/* =======img  */
+span.h1{
+    font-family: sans-serif;
+    font-size: 3rem;
+    font-weight: 600;
+    padding-left: 17rem;
+    margin-top: 1rem;
+    display: flex;
+}
+div.error{
     display: flex;
     justify-content: center;
-    gap: 10px;
-    padding-top: 60px;
-    gap: 5rem;
-    padding-bottom: 4rem;
 }
-/* login */
-div.Login{
-    display: flex;
-    flex-direction: column;
-    width:fit-content;
-    height: fit-content;
-    justify-content: flex-start;
-    align-items: flex-start;
-    border: #7b7b7b solid 1px;
-    border-radius: 20px;
-    padding: 1rem;
+div.error img{
+    width: 70%;
 }
-form#login-form a{
-    text-decoration: none;
-    color: black;
-    font-family: sans-serif;
-    font-size: 1rem;
-    margin-top: 1rem;
-    display: inline-block;
-}
-h1{
-    font-family: Exo,sans-serif;
-    font-size: 1.8rem;
-    font-weight: 600;
-    padding-bottom: 1rem;
-}
-#login-form #login-username{
-    width: 620px;
-    height: 39px;
-    border-radius: 5px;
-    border: #7b7b7b solid 1px;
-    margin-bottom: 1rem;
-    padding-left: 10px;
-    /* margin-top: 1rem; */
-}
-div.passwordWrapperLogin{
-    display: flex;
-    align-items: center;
-    margin-bottom: 1rem;
-    border: #7b7b7b solid 1px;
-    border-radius: 5px;
-}
-#login-form #login-password{
-    width: 590px;
-    height: 39px;
-    border-radius: 5px;
-    border: none;
-    padding-left: 10px;
-}
-#login-form input:focus{
-    outline: none !important;
-}
-#login-form label,#save{
-    font-family: sans-serif;
-    font-size: 1rem;
-    font-weight: 300;
-    color: #555555;
-}
-
-#login-form button{
-    width: 600px;
-    margin-top: 1rem;
-    background-color: #d18a63;
-    border: none;
-    border-radius: 20px;
-    font-size: 1.1rem;
-    padding: 0.7rem;
-}
-/* registration */
-div.registration{
-    width: fit-content;
-    height: 380px;
-    display: flex;
-    flex-direction: column;
-    border: #7b7b7b solid 1px;
-    border-radius: 20px;
-    padding: 1rem;
-}
-#registration-form #email,#registerUsername{
-    width: 620px;
-    height: 39px;
-    border-radius: 5px;
-    border: #7b7b7b solid 1px;
-    padding: 1rem 0rem;
-    margin-bottom: 1rem;
-    padding-left: 10px;
-}
-div.container img{
-    width: 20px;
-    height: 20px;
-}
-div.passwordWrapperConfirm,div.passwordWrapper{
-    display: flex;
-    align-items: center;
-    border: #7b7b7b solid 1px;
-    border-radius: 5px;
-}
-div.passwordWrapperConfirm{
-    margin-top: 1rem;
-}
-#registration-form button{
-    width: 600px;
-    margin-top: 1rem;
-    background-color: #d18a63;
-    border: none;
-    border-radius: 20px;
-    font-size: 1.1rem;
-    padding: 0.7rem;
-}
-div.passwordWrapperConfirm input{
-    width: 590px;
-    height: 39px;
-    border-radius: 5px;
-    border: none;
-    padding-left: 10px;
-}
-div.passwordWrapper input{
-    width: 590px;
-    height: 39px;
-    border-radius: 5px;
-    border: none;
-    padding-left: 10px;
-}
-#registerPassword:focus ,#confirmPassword:focus, #email:focus, #registerUsername{
-    outline: none;
-}
-
-/* Foooooooooooooter */
+/* footer  */
 div.site-footer{
     display: flex; 
     justify-content: center;
@@ -313,7 +194,6 @@ div.site-footer{
     background-color: #F5F5F5;
     padding: 4rem 0rem 1.9rem 0rem; 
     /* align-items: center; */
-    font-family: sans-serif;
 }
 div.site-footer div.footer-logo{
     display: flex;
@@ -370,14 +250,12 @@ footer.copyRight{
     justify-content: center;
     background-color: #F5F5F5;
     border-top: #d3d3d3 solid 1px;
-    font-family: sans-serif;
 }
 footer.copyRight a{
     text-decoration: none;
     color: #111111;
     font-weight: 700;
     font-size: 1.2rem;
-    font-family: sans-serif;
 }
 footer.copyRight a:hover{
     color:#ff782d ;
@@ -406,3 +284,4 @@ footer.copyRight a:hover{
     background-color:#eb976a ;
     cursor: pointer;
 }
+
